--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     background-image:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.5)), url(../images/Banner_Image.png);
     background-repeat: no-repeat;
     background-position: center;
-    margin: 10px auto;
+    margin: 40px auto;
     border-radius: 20px;
     
 }
@@ -32,4 +32,31 @@
 .new_year_celebration {
     font-size: 70px;
     line-height: 86px;
+}
+
+/* discount section */
+
+.new_year_discount{
+    margin: 100px auto;
+    text-align: center;
+}
+
+.discount_offer{
+    color: #FF0000;
+    font-size: 88px;
+}
+
+.better_deals{
+    margin: 48px 0px;
+}
+
+.holiday_deals{
+    font-size: 24px;
+    font-weight: 500;
+    color: #FF0000;
+}
+
+.catagories{
+    font-size: 48px;
+    color: #000000;
 }
