--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
 }
 
 /* banner style */
@@ -22,6 +21,7 @@
     text-align: center;
     color: #ffffff;
     padding: 190px 345px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .new_year {
@@ -39,10 +39,11 @@
 .new_year_discount{
     margin: 100px auto;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .discount_offer{
-    color: #FF0000;
+    color: #ff0000;
     font-size: 88px;
 }
 
@@ -53,7 +54,7 @@
 .holiday_deals{
     font-size: 24px;
     font-weight: 500;
-    color: #FF0000;
+    color: #ff0000;
 }
 
 .catagories{
@@ -63,3 +64,31 @@
 
 /* Midnight_party section */
 
+.midnight_party{
+    margin: 120px auto;
+    height: 600px;
+    width: 1320px;
+    background-image:linear-gradient(to right, rgba(0,0,0,0.9), rgba(0,0,0,0.2)), url(../images/Vectorrr.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 12px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.party_banner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 80px 126px;
+}
+
+.party_banner_headline{
+    font-size: 64px;
+    color: #ffffff;
+}
+
+.party_description{
+    font-size: 18px;
+    color: #ffffff;
+    padding-top: 20px;
+}
