--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@
 
 .catagories{
     font-size: 48px;
-    color: #000000;
 }
 
 /* Midnight_party section */
@@ -91,6 +90,7 @@
     font-size: 18px;
     color: #ffffff;
     padding-top: 30px;
+    width: 700px;
 }
 
 .join_btn{
@@ -108,4 +108,44 @@
 .join_btn:hover{
     color: #ffffff;
     background-color: #C3852F;
+}
+
+
+/* all products section */
+
+.party_products{
+    margin: 120px auto;
+    text-align: center;
+    width: 1320px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.best_gifts{
+    text-align: left;
+    font-size: 24px;
+    color: #ff0000;
+}
+
+.products_title{
+    text-align: left;
+    font-size: 48px;
+    margin: 20px 0px;
+}
+
+.products_description{
+    text-align: left;
+    font-size: 20px;
+    margin-bottom: 20px;
+    width: 890px;
+}
+
+.products img{
+    width: 435px;
+    height: auto;
+    padding: 20px;
+}
+
+.products img:hover{
+    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.533);
+    border-radius: 10px;
 }
